# aud_arb_bot

./: .gitignore  README.md  pyproject.toml
aud_arb_bot.egg-info/: PKG-INFO  SOURCES.txt
src/: app.py
src/arb/: engine.py  triangular.py
src/aud_arb_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/config/: exchanges.yml  fees.yml  pairs.yml  runtime.yml
src/core/: fees.py  symbol_map.py  types.py  utils.py
src/io/: cli.py  csv_sink.py  dashboard_api.py
src/md/: aggregator.py  rest_client.py  ws_client.py
